--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,33 +1,34 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: flask-app
+  name: wine-ml-app
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
-      app: flask-app
+      app: wine-ml-app
   template:
     metadata:
       labels:
-        app: flask-app
+        app: wine-ml-app
     spec:
       containers:
-        - name: flask-app
-          imagePullPolicy: IfNotPresent
-          image: flask-k8s-app:latest
-          ports:
-            - containerPort: 5000
+      - name: wine-ml-app
+        image: dock:latest
+        ports:
+        - containerPort: 5000
+
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: flask-service
+  name: wine-ml-service
 spec:
+  type: NodePort
   selector:
-    app: flask-app
+    app: wine-ml-app
   ports:
     - protocol: TCP
-      port: 80
+      port: 5000
       targetPort: 5000
-  type: LoadBalancer
+      nodePort: 30007  # Exposed on Minikube
